clean ups added

--- a/doctor-jekyll/Dockerfile
+++ b/doctor-jekyll/Dockerfile
@@ -7,8 +7,15 @@ RUN apt-get update && apt-get install -y \
     build-essential \
     ruby-full \
     ruby-dev && \
-    ruby -S gem install jekyll kramdown jekyll-paginate jekyll-gist
+    ruby -S gem install jekyll kramdown jekyll-paginate jekyll-gist && \
+    apt-get clean -y && \
+    apt-get autoclean -y && \
+    apt-get autoremove -y && \
+    rm -rf /usr/share/locale/* && \
+    rm -rf /var/cache/debconf/*-old && \
+    rm -rf /var/lib/apt/lists/* && \
+    rm -rf /usr/share/doc/*
 
-WORKDIR /src
+WORKDIR /var/jekyll
 
 EXPOSE	4000
