more gems added
added gems that are installed for beautiful-jekyll them

--- a/doctor-jekyll/Gemfile
+++ b/doctor-jekyll/Gemfile
@@ -12,3 +12,52 @@ gem 'sawyer', '0.7.0'
 gem 'octokit', '4.3.0'
 gem 'jekyll-gist', '1.4.0'
 gem 'jekyll-paginate', '1.1.0'
+gem 'RedCloth', '4.2.9'
+gem 'i18n', '0.7.0'
+gem 'json', '1.8.3'
+gem 'minitest', '5.8.2'
+gem 'thread_safe', '0.3.5'
+gem 'fast-stemmer', '1.0.2'
+gem 'coffee-script-source', '1.9.1.1'
+gem 'execjs', '2.6.0'
+gem 'colorator', '0.1'
+gem 'ffi', '1.9.10'
+gem 'gemoji', '2.1.0'
+gem 'net-dns', '0.8.0'
+gem 'public_suffix', '1.5.2'
+gem 'sass', '3.4.19'
+gem 'rb-fsevent', '0.9.6'
+gem 'kramdown', '1.5.0'
+gem 'mercenary', '0.3.5'
+gem 'posix-spawn', '0.3.11'
+gem 'yajl-ruby', '1.2.1'
+gem 'redcarpet', '3.3.2'
+gem 'jekyll-feed', '0.3.1'
+gem 'mini_portile', '0.6.2'
+gem 'jekyll-sitemap', '0.8.1'
+gem 'maruku', '0.7.0'
+gem 'rdiscount', '2.1.7'
+gem 'terminal-table', '1.5.2'
+gem 'libv8', '3.16.14.13'
+gem 'ref', '2.0.0'
+gem 'tzinfo', '1.2.2'
+gem 'parslet', '1.5.0'
+gem 'classifier-reborn', '2.0.4'
+gem 'coffee-script', '2.4.1'
+gem 'ethon', '0.8.0'
+gem 'rb-inotify', '0.9.5'
+gem 'jekyll-sass-converter', '1.3.0'
+gem 'pygments.rb', '0.6.3'
+gem 'nokogiri', '1.6.6.2'
+gem 'therubyracer', '0.12.2'
+gem 'activesupport', '4.2.4'
+gem 'toml', '0.1.2'
+gem 'jekyll-coffeescript', '1.0.1'
+gem 'typhoeus', '0.8.0'
+gem 'html-pipeline', '1.9.0'
+gem 'github-pages-health-check', '0.5.3'
+gem 'jekyll-watch', '1.3.0'
+gem 'jekyll-mentions', '0.2.1'
+gem 'jekyll-redirect-from', '0.8.0'
+gem 'jemoji', '0.5.0'
+gem 'github-pages', '39'
